--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
